src/objects/Lcm_TestTask__c.object
<CustomObject>
    <description>Testaufgabe, mit der im Rahmen einer Testphase ein Testfall getestet/ausgeführt wird.</description>
    <fields>
        <fullName>Lcm_ErrorState__c</fullName>
        <description>Fehlerstatus bei nicht erfolgreichen Testaufgaben</description>
        <inlineHelpText>Fehlerstatus bei nicht erfolgreichen Testaufgaben</inlineHelpText>
        <label>Fehler-Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>in Behebung</fullName>
                    <color>#0B6FCE</color>
                    <label>in Behebung</label>
                </value>
                <value>
                    <fullName>behoben</fullName>
                    <color>#78C953</color>
                    <label>behoben</label>
                </value>
                <value>
                    <fullName>Bedienfehler</fullName>
                    <color>#E27001</color>
                    <label>Bedienfehler</label>
                </value>
                <value>
                    <fullName>neues/abweichendes Requirement</fullName>
                    <color>#A845DC</color>
                    <label>neues/abweichendes Requirement</label>
                </value>
                <value>
                    <fullName>akzeptiert</fullName>
                    <color>#F3D904</color>
                    <label>akzeptiert</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lcm_RequirementDescription__c</fullName>
        <description>Beschreibung des Requirements</description>
        <inlineHelpText>Beschreibung des Requirements</inlineHelpText>
        <label>Requirement-Beschreibung</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lcm_RequirementName__c</fullName>
        <description>Bezeichnung des Requirements</description>
        <inlineHelpText>Bezeichnung des Requirements</inlineHelpText>
        <label>Requirement-Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lcm_ResultDescription__c</fullName>
        <description>Beschreibung des Testergebnis. Sowohl im positiven, wie auch im negativen Fall.</description>
        <inlineHelpText>Beschreibung des Testergebnis. Sowohl im positiven, wie auch im negativen Fall.</inlineHelpText>
        <label>Testergebnis-Beschreibung</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Lcm_ResultState__c</fullName>
        <description>Ergebnis der Testaufgabe.</description>
        <inlineHelpText>Ergebnis der Testaufgabe.</inlineHelpText>
        <label>Testergebnis-Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>offen</fullName>
                    <default>true</default>
                    <label>offen</label>
                </value>
                <value>
                    <fullName>erfolgreich</fullName>
                </value>
                <value>
                    <fullName>nicht erfolgreich</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lcm_StateCopy__c</fullName>
        <description>wird per Trigger aus Formelfeld Lcm_State gefüllt, um einen Feldverlauf zu ermöglichen</description>
        <inlineHelpText>Status der Testaufgabe. Ergibt sich aus Testergebnis-Status und Fehler-Status.</inlineHelpText>
        <label>Gesamt-Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>offen</fullName>
                    <color>#33CCFF</color>
                    <label>offen</label>
                </value>
                <value>
                    <fullName>erfolgreich</fullName>
                    <color>#33CC00</color>
                    <label>erfolgreich</label>
                </value>
                <value>
                    <fullName>nicht erfolgreich</fullName>
                    <color>#FF0000</color>
                    <label>nicht erfolgreich</label>
                </value>
                <value>
                    <fullName>in Fehlerbehebung</fullName>
                    <color>#FF6666</color>
                    <label>in Fehlerbehebung</label>
                </value>
                <value>
                    <fullName>Retest offen</fullName>
                    <color>#3366FF</color>
                    <label>Retest offen</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lcm_State__c</fullName>
        <description>Status der Testaufgabe. Ergibt sich aus Testergebnis-Status und Fehler-Status.</description>
        <formula>CASE ( Text(Lcm_ResultState__c),
  &apos;offen&apos; , &apos;offen&apos;,
  &apos;erfolgreich&apos; , &apos;erfolgreich&apos;,
  &apos;nicht erfolgreich&apos;, CASE ( Text ( Lcm_ErrorState__c),
    &apos;in Fehlerbehebung&apos;, &apos;in Fehlerbehebung&apos;,
    &apos;behoben&apos;, &apos;Retest offen&apos;,
    &apos;Bedienfehler&apos;, &apos;Retest offen&apos;,
    &apos;akzeptiert&apos;, &apos;erfolgreich&apos;,
    &apos;neues/abweichendes Requirement&apos;, &apos;erfolgreich&apos;,
    &apos;nicht erfolgreich&apos;),

  &apos;unbekannt&apos;
  )</formula>
        <inlineHelpText>Status der Testaufgabe. Ergibt sich aus Testergebnis-Status und Fehler-Status.</inlineHelpText>
        <label>Gesamt-Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_TestCaseDescription__c</fullName>
        <description>Beschreibung des Testfalls</description>
        <inlineHelpText>Beschreibung des Testfalls</inlineHelpText>
        <label>Testfall-Beschreibung</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lcm_TestCaseExpResult__c</fullName>
        <description>erwartetes Ergebnis am Ende der Testausführung</description>
        <inlineHelpText>erwartetes Ergebnis am Ende der Testausführung</inlineHelpText>
        <label>Testfall-Erwartetes Ergebnis</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lcm_TestCaseName__c</fullName>
        <description>Name des Testfalls, Kurzbeschreibung</description>
        <inlineHelpText>Name des Testfalls, Kurzbeschreibung</inlineHelpText>
        <label>Testfall-Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lcm_TestCasePrecondition__c</fullName>
        <description>Vorbedingungen, die erfüllt sein müssen, damit Testfall ausgeführt werden kann.</description>
        <inlineHelpText>Vorbedingungen, die erfüllt sein müssen, damit Testfall ausgeführt werden kann.</inlineHelpText>
        <label>Testfall-Vorbedingungen</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lcm_TestCaseSteps__c</fullName>
        <description>Testschritte des Testfalls</description>
        <inlineHelpText>Testschritte des Testfalls</inlineHelpText>
        <label>Testschritte</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Lcm_TestCaseTestdata__c</fullName>
        <description>Hinweise zu Testdaten, mit denen der Testfall ausgeführt werden soll</description>
        <inlineHelpText>Hinweise zu Testdaten, mit denen der Testfall ausgeführt werden soll</inlineHelpText>
        <label>Testfall-Testdaten</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lcm_TestCase__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Testfall der durch Testaufgabe durchzuführen ist.</description>
        <inlineHelpText>Testfall der durch Testaufgabe durchzuführen ist.</inlineHelpText>
        <label>Testfall-Nr</label>
        <referenceTo>Lcm_TestCase__c</referenceTo>
        <relationshipLabel>Testaufgaben</relationshipLabel>
        <relationshipName>Testaufgaben</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lcm_TestPhaseName__c</fullName>
        <description>Name der Testphase</description>
        <formula>Lcm_TestPhase__r.Lcm_TestphaseName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Name der Testphase</inlineHelpText>
        <label>Testphase-Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_TestPhase__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Testphase in der Testaufgabe durchgeführt wird</description>
        <inlineHelpText>Testphase in der Testaufgabe durchgeführt wird</inlineHelpText>
        <label>Testphase-Nr</label>
        <referenceTo>Lcm_TestPhase__c</referenceTo>
        <relationshipLabel>Testaufgaben</relationshipLabel>
        <relationshipName>Testaufgaben</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lcm_TestSphere__c</fullName>
        <description>Zuordnung zur jeweiligen Test-Sphere. Hilfefeld für die Freigabeeinstellung</description>
        <inlineHelpText>Zuordnung zur jeweiligen Test-Sphere. Hilfefeld für die Freigabeeinstellung</inlineHelpText>
        <label>Lcm_TestSphere</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_VersionsName__c</fullName>
        <formula>Lcm_TestCase__r.Lcm_Requirement__r.Lcm_VersionName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Versions-Name</label>
        <type>Text</type>
    </fields>
    <label>Testaufgabe</label>
    <listViews>
        <fullName>Adv_Regressiontests</fullName>
        <columns>Lcm_VersionsName__c</columns>
        <columns>Lcm_TestPhase__c</columns>
        <columns>Lcm_TestPhaseName__c</columns>
        <columns>NAME</columns>
        <columns>Lcm_TestCase__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Lcm_State__c</columns>
        <columns>Lcm_ResultState__c</columns>
        <columns>Lcm_ErrorState__c</columns>
        <columns>Lcm_ResultDescription__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lcm_VersionsName__c</field>
            <operation>equals</operation>
            <value>Adv Regressiontests</value>
        </filters>
        <filters>
            <field>Lcm_TestPhaseName__c</field>
            <operation>equals</operation>
            <value>Adc Regressionstest Rel.4-17</value>
        </filters>
        <label>Adv Regressiontests</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Adv_Regressiontests_offen</fullName>
        <columns>Lcm_VersionsName__c</columns>
        <columns>Lcm_TestPhase__c</columns>
        <columns>Lcm_TestPhaseName__c</columns>
        <columns>NAME</columns>
        <columns>Lcm_TestCase__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Lcm_State__c</columns>
        <columns>Lcm_ResultState__c</columns>
        <columns>Lcm_ErrorState__c</columns>
        <columns>Lcm_ResultDescription__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lcm_VersionsName__c</field>
            <operation>equals</operation>
            <value>Adv Regressiontests</value>
        </filters>
        <filters>
            <field>Lcm_TestPhaseName__c</field>
            <operation>equals</operation>
            <value>Adc Regressionstest Rel.4-17</value>
        </filters>
        <filters>
            <field>Lcm_ResultState__c</field>
            <operation>equals</operation>
            <value>offen</value>
        </filters>
        <label>Adv Regressiontests offen</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>Lcm_TestPhase__c</columns>
        <columns>Lcm_TestSphere__c</columns>
        <columns>Lcm_TestPhaseName__c</columns>
        <columns>NAME</columns>
        <columns>Lcm_TestCase__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Lcm_State__c</columns>
        <columns>Lcm_ResultState__c</columns>
        <columns>Lcm_ErrorState__c</columns>
        <columns>Lcm_ResultDescription__c</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>All_Tobi</fullName>
        <columns>Lcm_TestPhase__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Lcm_ResultState__c</columns>
        <columns>Lcm_TestCaseName__c</columns>
        <columns>Lcm_ResultDescription__c</columns>
        <columns>Lcm_State__c</columns>
        <columns>NAME</columns>
        <columns>Lcm_TestCase__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>unsinn</value>
        </filters>
        <label>Alle Tobi</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>ErrorTestTask</fullName>
        <columns>Lcm_VersionsName__c</columns>
        <columns>Lcm_TestPhase__c</columns>
        <columns>Lcm_TestPhaseName__c</columns>
        <columns>NAME</columns>
        <columns>Lcm_TestCase__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Lcm_State__c</columns>
        <columns>Lcm_ResultState__c</columns>
        <columns>Lcm_ErrorState__c</columns>
        <columns>Lcm_ResultDescription__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lcm_State__c</field>
            <operation>equals</operation>
            <value>nicht erfolgreich</value>
        </filters>
        <label>Alle nicht erfolgreichen Testaufgaben</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Meine_Testaufgaben</fullName>
        <columns>Lcm_VersionsName__c</columns>
        <columns>Lcm_TestPhase__c</columns>
        <columns>Lcm_TestPhaseName__c</columns>
        <columns>NAME</columns>
        <columns>Lcm_TestCase__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Lcm_State__c</columns>
        <columns>Lcm_ResultState__c</columns>
        <columns>Lcm_ErrorState__c</columns>
        <columns>Lcm_ResultDescription__c</columns>
        <filterScope>Mine</filterScope>
        <label>Meine Testaufgaben</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>OpenTestTask</fullName>
        <columns>Lcm_VersionsName__c</columns>
        <columns>Lcm_TestPhase__c</columns>
        <columns>Lcm_TestPhaseName__c</columns>
        <columns>NAME</columns>
        <columns>Lcm_TestCase__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Lcm_State__c</columns>
        <columns>Lcm_ResultState__c</columns>
        <columns>Lcm_ErrorState__c</columns>
        <columns>Lcm_ResultDescription__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lcm_State__c</field>
            <operation>contains</operation>
            <value>offen</value>
        </filters>
        <label>Alle offenen Testaufgaben</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>in_Fehlerbebung</fullName>
        <columns>Lcm_TestPhase__c</columns>
        <columns>Lcm_TestSphere__c</columns>
        <columns>Lcm_TestPhaseName__c</columns>
        <columns>NAME</columns>
        <columns>Lcm_TestCase__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Lcm_State__c</columns>
        <columns>Lcm_ResultState__c</columns>
        <columns>Lcm_ErrorState__c</columns>
        <columns>Lcm_ResultDescription__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lcm_ErrorState__c</field>
            <operation>equals</operation>
            <value>in Behebung</value>
        </filters>
        <label>in Fehlerbebung</label>
        <language>de</language>
    </listViews>
    <nameField>
        <displayFormat>TT-{0000}</displayFormat>
        <label>Testaufgabe-Nr</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Testaufgaben</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>